[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Qamar <qalkhatib0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
keras = "^2.7.0"
tensorflow = "^2.7.0"
sklearn = "^0.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
